--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,5 +1,10 @@
-@import '../../../styles/colors';
+@import '../../../styles/variables';
 
 .header__body {
  background-color: $mine-shaft;
+}
+.header__nav-link {
+  color: $primary-color;
+  text-decoration: none;
+  font-size: 1.2rem;
 }
