--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,3 +3,5 @@
 $body-font-family: 'Roboto', 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $base-font-size: 1.4rem;
 $primary-color: $mine-shaft;
+$secondary-color: $light-green;
+$tertiary-color: $dark-green;
