added custom fonts

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -25,7 +25,7 @@
         Twitter
       </a>
     </div>
-    <div class="header__misc-links">
+    <div class="header__misc-links d-none d-md-block">
       <span class="header__nav-link p-r-20">
         <fa-icon class="p-r-5" [icon]="faPrint"></fa-icon>
         Print this page
