--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,7 +1,9 @@
+@import 'variables';
 @import '~bootstrap/scss/bootstrap-reboot';
 @import '~bootstrap/scss/bootstrap-grid';
 
 // common
+@import 'fonts';
 @import 'helpers';
 @import 'typography';
 @import 'forms';
