--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,7 @@
 @import 'colors';
 
-$body-font-family: 'Roboto', 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-$base-font-size: 1.4rem;
+$font-family-base: 'lucida-sans', lucida-sans, 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$font-size-base: 1.4rem;
 $primary-color: $mine-shaft;
 $secondary-color: $light-green;
 $tertiary-color: $dark-green;
