--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -5,7 +5,7 @@
   border-radius: 0.4rem;
   padding: 1.7rem;
   font-size: 1.6rem;
-  font-family: $body-font-family;
+  font-family: $font-family-base;
 
   &::placeholder {
     color: $mine-shaft;
