--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -3,12 +3,12 @@
 
 html {
   font-size: 62.5%;
-  font-family: $body-font-family;
+  font-family: $font-family-base;
   color: $primary-color;
 }
 
 body {
-  font-size: $base-font-size;
+  font-size: $font-size-base;
   line-height: 1.5;
   font-weight: 300;
 }
