--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,6 +1,9 @@
 // http://chir.ag/projects/name-that-color/#26478D
 $mine-shaft: #303030;
 $white: #fff;
+$mercury: #e6e6e6;
+$gallery: #ececec;
+$silver: #C7C7C7;
 
 $light-green: #b5d443;
 $dark-green: #73990b;
