--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -55,6 +55,16 @@ h2 {
 h3 {
   @include h3();
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @include palatinoFont();
+}
+
 .error-color {
   color: $alizarin-crimson;
 }
