--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,8 @@
 @import 'colors';
 
 $font-family-base: 'lucida-sans', lucida-sans, 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$font-family-palatino: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
+$font-family-trajan: 'trajan-pro', trajan-pro, 'lucida-sans', lucida-sans, 'Lucida Grande', Garuda, sans-serif;
 $font-size-base: 1.4rem;
 $primary-color: $mine-shaft;
 $secondary-color: $light-green;
