--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -13,28 +13,14 @@
   padding-top: 4.0rem;
   padding-bottom: 4.0rem;
 }
-.header__logo-bg {
+.header__nav-bg {
   background-color: $mine-shaft;
 }
-.header__nav-bg {
-  background: linear-gradient(to bottom, $gallery 50%, $mercury 50%) no-repeat;
-  border-top: solid 1px $silver;
-  border-bottom: solid 1px $silver;
-}
-.header__nav-list {
-  margin: 0;
-  padding: 0;
-}
-.header__nav-item {
-  display: inline-flex;
-}
-
 .header__nav-link {
-  padding: 12px 12px 12px 0;
+  padding: 1.2rem 1.0rem 1.2rem 0;
   color: $white;
   text-decoration: none;
 }
-
 .header__nav-link:hover {
   color: $light-green;
 }
