--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -40,8 +40,8 @@
     </div>
   </div>
   <div class="header__nav-bg">
-    <div class="container">
-      <div class="row align-items-center">
+    <div class="container h-100">
+      <div class="row align-items-center h-100">
         <a class="header__logo col-sm-12 col-lg-5" href="/">Creative <span>Developments</span></a>
         <nav class="col-lg-7 text-lg-right">
           <ul class="m-0 p-0">
