--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,5 +1,8 @@
 @import '../../../styles/variables';
 @import '../../../styles/mixins';
+@import '~bootstrap/scss/functions';
+@import '~bootstrap/scss/variables';
+@import '~bootstrap/scss/mixins/breakpoints';
 
 .header__social-link {
   color: $primary-color;
@@ -10,8 +13,8 @@
   font-family: $font-family-trajan;
   font-size: 2.5rem;
   text-decoration: none;
-  padding-top: 4.0rem;
-  padding-bottom: 4.0rem;
+  padding-top: 2.0rem;
+  padding-bottom: 2.0rem;
 }
 .header__nav-bg {
   background-color: $mine-shaft;
@@ -23,4 +26,11 @@
 }
 .header__nav-link:hover {
   color: $light-green;
+}
+
+@include media-breakpoint-up(lg) {
+  .header__nav-bg {
+    background: transparent url('~/assets/images/header/header-bg.gif') repeat-x 0 bottom;
+    height: 12.0rem;
+  }
 }
