--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,26 +1,26 @@
 <header>
-  <div class="container pt-2 pb-2">
+  <div class="container pt-3 pb-3">
     <div class="row">
       <div class="col-sm-12 col-md-8">
         <div>
           <a href="skype:omar.creativedevelopments.net?call" title="Skype: omar.creativedevelopments.net"
              target="_blank" class="header__social-link pr-4">
-            <fa-icon class="pr-1 skype-color" [icon]="faSkype"></fa-icon>
+            <fa-icon class="pr-2 skype-color" [icon]="faSkype"></fa-icon>
             Skype
           </a>
           <a href="https://www.linkedin.com/in/omarcreativedev" title="LinkedIn: Omar Mirza" target="_blank"
              class="header__social-link pr-4">
-            <fa-icon class="pr-1 linked-in-color" [icon]="faLinkedinIn"></fa-icon>
+            <fa-icon class="pr-2 linked-in-color" [icon]="faLinkedinIn"></fa-icon>
             LinkedIn
           </a>
           <a href="https://plus.google.com/u/0/108712254152026254053/about" title="Google Plus: Omar Mirza"
              target="_blank" class="header__social-link pr-4">
-            <fa-icon class="pr-1 google-plus-color" [icon]="faGooglePlusG"></fa-icon>
+            <fa-icon class="pr-2 google-plus-color" [icon]="faGooglePlusG"></fa-icon>
             Google Plus
           </a>
           <a href="https://twitter.com/OmarCreativeDev" title="Twitter: OmarCreativeDev" target="_blank"
              class="header__social-link">
-            <fa-icon class="pr-1 twitter-color" [icon]="faTwitter"></fa-icon>
+            <fa-icon class="pr-2 twitter-color" [icon]="faTwitter"></fa-icon>
             Twitter
           </a>
         </div>
@@ -28,11 +28,11 @@
       <div class="col-md-4 right-align text-right">
         <div class="d-none d-md-block">
           <span class="header__social-link pr-4">
-            <fa-icon class="pr-1" [icon]="faPrint"></fa-icon>
+            <fa-icon class="pr-2" [icon]="faPrint"></fa-icon>
             Print this page
           </span>
           <a class="header__social-link" href="/sitemap.html">
-            <fa-icon class="pr-1" [icon]="faSitemap"></fa-icon>
+            <fa-icon class="pr-2" [icon]="faSitemap"></fa-icon>
             Sitemap
           </a>
         </div>
@@ -42,14 +42,14 @@
   <div class="header__nav-bg">
     <div class="container h-100">
       <div class="row align-items-center h-100">
-        <a class="header__logo col-sm-12 col-lg-5" href="/">Creative <span>Developments</span></a>
+        <a class="header__logo col-sm-12 col-lg-5" href="/"><span class="text-white">Creative</span> Developments</a>
         <nav class="col-lg-7 text-lg-right">
           <ul class="m-0 p-0">
             <li class="d-inline-flex">
               <a class="header__nav-link" href="/" title="Home">HOME</a>
             </li>
             <li class="d-inline-flex">
-              <a class="header__nav-link" href="/about-me.html" title="About Me">ABOUT ME</a>
+              <a class="header__nav-link" href="/about-me.html" title="About Me">ABOUT</a>
             </li>
             <li class="d-inline-flex">
               <a class="header__nav-link" href="/portfolio/" title="Portfolio">PORTFOLIO</a>
@@ -61,10 +61,10 @@
               <a class="header__nav-link" href="/services/" title="Services">SERVICES</a>
             </li>
             <li class="d-inline-flex">
-              <a class="header__nav-link" href="/my-skills.html" title="My SKills">MY SKILLS</a>
+              <a class="header__nav-link" href="/my-skills.html" title="My SKills">SKILLS</a>
             </li>
             <li class="d-inline-flex">
-              <a class="header__nav-link pr-lg-0" href="/contact-me.html" title="Contact Me">CONTACT ME</a>
+              <a class="header__nav-link pr-lg-0" href="/contact-me.html" title="Contact Me">CONTACT</a>
             </li>
           </ul>
         </nav>
