--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,36 +4,34 @@
       <div class="col-sm-12 col-md-8">
         <a href="skype:omar.creativedevelopments.net?call" title="Skype: omar.creativedevelopments.net"
            target="_blank" class="header__social-link pr-4">
-          <fa-icon class="pr-2 skype-color" [icon]="faSkype"></fa-icon>
+          <fa-icon class="pr-2 skype-color header__social-icon" [icon]="faSkype"></fa-icon>
           Skype
         </a>
         <a href="https://www.linkedin.com/in/omarcreativedev" title="LinkedIn: Omar Mirza" target="_blank"
            class="header__social-link pr-4">
-          <fa-icon class="pr-2 linked-in-color" [icon]="faLinkedinIn"></fa-icon>
+          <fa-icon class="pr-2 linked-in-color header__social-icon" [icon]="faLinkedinIn"></fa-icon>
           LinkedIn
         </a>
         <a href="https://plus.google.com/u/0/108712254152026254053/about" title="Google Plus: Omar Mirza"
            target="_blank" class="header__social-link pr-4">
-          <fa-icon class="pr-2 google-plus-color" [icon]="faGooglePlusG"></fa-icon>
+          <fa-icon class="pr-2 google-plus-color header__social-icon" [icon]="faGooglePlusG"></fa-icon>
           Google Plus
         </a>
         <a href="https://twitter.com/OmarCreativeDev" title="Twitter: OmarCreativeDev" target="_blank"
            class="header__social-link">
-          <fa-icon class="pr-2 twitter-color" [icon]="faTwitter"></fa-icon>
+          <fa-icon class="pr-2 twitter-color header__social-icon" [icon]="faTwitter"></fa-icon>
           Twitter
         </a>
       </div>
-      <div class="col-md-4 right-align text-right">
-        <div class="d-none d-md-block">
-          <span class="header__social-link pr-4">
-            <fa-icon class="pr-2" [icon]="faPrint"></fa-icon>
-            Print this page
-          </span>
-          <a class="header__social-link" href="/sitemap.html">
-            <fa-icon class="pr-2" [icon]="faSitemap"></fa-icon>
-            Sitemap
-          </a>
-        </div>
+      <div class="col-md-4 text-right d-none d-md-block">
+        <span class="header__social-link pr-4">
+          <fa-icon class="pr-2 header__social-icon" [icon]="faPrint"></fa-icon>
+          Print page
+        </span>
+        <a class="header__social-link" href="/sitemap.html">
+          <fa-icon class="pr-2 header__social-icon" [icon]="faSitemap"></fa-icon>
+          Sitemap
+        </a>
       </div>
     </div>
   </div>
