--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -9,6 +9,9 @@
   text-decoration: none;
   font-size: 1.2rem;
 }
+.header__social-icon {
+  font-size: 1.4rem;
+}
 .header__logo {
   font-family: $font-family-trajan;
   font-size: 2.5rem;
