optimized header code, bg images, created mixin for reuseable code

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <div class="container pt-3 pb-3">
+  <div class="container py-3">
     <div class="row">
       <div class="col-sm-12 col-md-8">
         <a href="skype:omar.creativedevelopments.net?call" title="Skype: omar.creativedevelopments.net"
@@ -40,7 +40,7 @@
       <div class="row align-items-center h-100">
         <a class="header__logo col-sm-12 col-lg-5" href="/"><span class="text-white">Creative</span> Developments</a>
         <nav class="col-lg-7 text-lg-right">
-          <ul class="m-0 p-0">
+          <ul class="m-0 px-0 pb-5 pb-lg-0">
             <li class="d-inline-flex">
               <a class="header__nav-link" href="/" title="Home">HOME</a>
             </li>
