--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,3 +1,6 @@
-footer {
-  background-color: red;
+@import '../../../styles/variables';
+@import '../../../styles/mixins';
+
+.footer__nav-bg {
+  @include bannerBg();
 }
