--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,8 +1,5 @@
 @import '../../../styles/variables';
 @import '../../../styles/mixins';
-@import '~bootstrap/scss/functions';
-@import '~bootstrap/scss/variables';
-@import '~bootstrap/scss/mixins/breakpoints';
 
 .header__social-link {
   color: $primary-color;
@@ -16,11 +13,11 @@
   font-family: $font-family-trajan;
   font-size: 2.5rem;
   text-decoration: none;
-  padding-top: 2.0rem;
-  padding-bottom: 2.0rem;
+  padding-top: 4.0rem;
+  padding-bottom: 4.0rem;
 }
 .header__nav-bg {
-  background-color: $mine-shaft;
+  @include bannerBg();
 }
 .header__nav-link {
   padding: 1.2rem 2.0rem 1.2rem 0;
@@ -29,11 +26,4 @@
 }
 .header__nav-link:hover {
   color: $light-green;
-}
-
-@include media-breakpoint-up(lg) {
-  .header__nav-bg {
-    background: transparent url('~/assets/images/header/header-bg.gif') repeat-x 0 bottom;
-    height: 12.0rem;
-  }
 }
