updates to footer

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
-  <div class="container py-3">
+  <div class="container py-4">
     <div class="row">
       <div class="col-sm-6 col-md-6">
         <fa-icon class="pr-2" [icon]="faCode"></fa-icon>
@@ -15,8 +15,8 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <dl>
-            <dt><span>Cross</span> browser <span>support</span></dt>
+          <dl class="footer__nav-list">
+            <dt class="footer__nav-title pb-5"><span>Cross</span> browser <span>support</span></dt>
             <dd><i class="fa fa-internet-explorer darkBlue large"></i></dd>
             <dd><i class="fa fa-opera red large"></i></dd>
             <dd><i class="fa fa-firefox orange large"></i></dd>
@@ -28,82 +28,88 @@
           </dl>
         </div>
         <div class="col-sm-4">
-          <dl>
-            <dt><span>Navigation</span> Links</dt>
-            <dd><a href="/">Home</a></dd>
-            <dd><a href="/about-me.html">About Me</a></dd>
-            <dd><a href="/portfolio/">Portfolio</a></dd>
-            <dd><a href="/hire-me.html">Hire Me</a></dd>
-            <dd><a href="/services/">Services</a></dd>
-            <dd><a href="/my-skills.html">My Skills</a></dd>
-            <dd><a href="/contact-me.html">Contact Me</a></dd>
-            <dd><a href="/privacy-policy.html">Privacy Policy</a></dd>
-            <dd><a href="/sitemap.html">Sitemap</a></dd>
-            <dd><a href="/terms-and-conditions.html">Terms</a></dd>
+          <dl class="footer__nav-list">
+            <dt class="footer__nav-title pb-5"><span>Navigation</span> Links</dt>
+            <dd><a class="footer__nav-link" href="/">Home</a></dd>
+            <dd><a class="footer__nav-link" href="/about-me.html">About Me</a></dd>
+            <dd><a class="footer__nav-link" href="/portfolio/">Portfolio</a></dd>
+            <dd><a class="footer__nav-link" href="/hire-me.html">Hire Me</a></dd>
+            <dd><a class="footer__nav-link" href="/services/">Services</a></dd>
+            <dd><a class="footer__nav-link" href="/my-skills.html">My Skills</a></dd>
+            <dd><a class="footer__nav-link" href="/contact-me.html">Contact Me</a></dd>
+            <dd><a class="footer__nav-link" href="/privacy-policy.html">Privacy Policy</a></dd>
+            <dd><a class="footer__nav-link" href="/sitemap.html">Sitemap</a></dd>
+            <dd><a class="footer__nav-link" href="/terms-and-conditions.html">Terms</a></dd>
           </dl>
         </div>
         <div class="col-sm-4">
-          <dl>
-            <dt><span>Favourite</span> Links</dt>
-            <dd><a rel="nofollow" href="http://stackoverflow.com/">http://stackoverflow.com/</a></dd>
-            <dd><a rel="nofollow" href="https://angularjs.org/">https://angularjs.org/</a></dd>
-            <dd><a rel="nofollow" href="http://css-tricks.com/">http://css-tricks.com/</a></dd>
-            <dd><a rel="nofollow" href="http://jquery.com/">http://jquery.com/</a></dd>
-            <dd><a rel="nofollow" href="http://bytes.com/">http://bytes.com</a></dd>
+          <dl class="footer__nav-list">
+            <dt class="footer__nav-title pb-5"><span>Favourite</span> Links</dt>
+            <dd>
+              <a class="footer__nav-link" rel="nofollow" href="http://stackoverflow.com/">http://stackoverflow.com/</a>
+            </dd>
+            <dd><a class="footer__nav-link" rel="nofollow" href="https://angularjs.org/">https://angularjs.org/</a></dd>
+            <dd><a class="footer__nav-link" rel="nofollow" href="http://css-tricks.com/">http://css-tricks.com/</a></dd>
+            <dd><a class="footer__nav-link" rel="nofollow" href="http://jquery.com/">http://jquery.com/</a></dd>
+            <dd><a class="footer__nav-link" rel="nofollow" href="http://bytes.com/">http://bytes.com</a></dd>
           </dl>
         </div>
       </div>
       <div class="row">
         <div class="col-sm-4">
-          <dl>
-            <dt><span>Contact</span> Info</dt>
+          <dl class="footer__nav-list">
+            <dt class="footer__nav-title pb-5"><span>Contact</span> Info</dt>
             <dd>
               <i class="fa fa-phone small"></i>
-              <a href="tel:07932 566 488">07932 566 488</a>
+              <a class="footer__nav-link" href="tel:07932 566 488">07932 566 488</a>
             </dd>
             <dd>
               <i class="fa fa-envelope-o small"></i>
-              <a href="mailto:omar.creative.dev@gmail.com?subject=Creative%20Developments">
+              <a class="footer__nav-link" href="mailto:omar.creative.dev@gmail.com?subject=Creative%20Developments">
                 omar.creative.dev@gmail.com
               </a>
             </dd>
           </dl>
         </div>
         <div class="col-sm-4">
-          <dl>
-            <dt><span>100%</span> Valid <span>Html5</span> &amp; <span>Css3</span></dt>
-            <dd><a rel="nofollow" href="http://validator.w3.org/check?uri=referer" target="_blank" class="validHtml5">
+          <dl class="footer__nav-list">
+            <dt class="footer__nav-title pb-5"><span>100%</span> Valid <span>Html5</span> &amp; <span>Css3</span></dt>
+            <dd>
+              <a rel="nofollow" href="http://validator.w3.org/check?uri=referer" target="_blank"
+                class="validHtml5 footer__nav-link">
               <i class="fa fa-html5 orange large"></i>
             </a></dd>
             <dd>
               <a rel="nofollow" href="http://jigsaw.w3.org/css-validator/check/referer?profile=css3" target="_blank"
-              class="validCss3">
+              class="validCss3 footer__nav-link">
               <i class="fa fa-css3 lightBlue large"></i>
             </a></dd>
           </dl>
         </div>
         <div class="col-sm-4">
-          <dl>
-            <dt><span>Connect</span> With <span>Me</span></dt>
+          <dl class="footer__nav-list">
+            <dt class="footer__nav-title pb-5"><span>Connect</span> With <span>Me</span></dt>
             <dd>
               <a href="skype:omar.creativedevelopments.net?call" title="Skype: omar.creativedevelopments.net"
-                target="_blank">
+                target="_blank" class="footer__nav-link">
                 <i class="fa fa-skype lightBlue large"></i>
               </a>
             </dd>
             <dd>
-              <a href="https://www.linkedin.com/in/omarcreativedev" title="LinkedIn: Omar Mirza" target="_blank">
+              <a href="https://www.linkedin.com/in/omarcreativedev" title="LinkedIn: Omar Mirza" target="_blank"
+                class="footer__nav-link">
                 <i class="fa fa-linkedin darkBlue large"></i>
               </a>
             </dd>
             <dd>
               <a href="https://plus.google.com/u/0/108712254152026254053/about" title="Google Plus: Omar Mirza"
-                target="_blank">
+                class="footer__nav-link" target="_blank">
                 <i class="fa fa-google-plus red large"></i>
               </a>
             </dd>
             <dd>
-              <a href="https://twitter.com/OmarCreativeDev" title="Twitter: OmarCreativeDev" target="_blank">
+              <a href="https://twitter.com/OmarCreativeDev" title="Twitter: OmarCreativeDev" target="_blank"
+                class="footer__nav-link">
                 <i class="fa fa-twitter lightBlue large"></i>
               </a>
             </dd>
@@ -112,10 +118,10 @@
       </div>
     </div>
   </div>
-  <div class="container py-3">
+  <div class="container py-4">
     <div class="row">
       <div class="col-sm-6 col-md-6">
-        <span>&copy; Copyright {{ currentYear() }}> Creative Developments.net. All rights reserved.</span>
+        &copy; Copyright {{ currentYear() }} Creative Developments.net. All rights reserved.
       </div>
       <div class="col-sm-6 col-md-6 text-right">
         <a href="/">Creative <span>Developments</span>.net</a>
