updates to header, footer and sass files

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -16,7 +16,7 @@
       <div class="row">
         <div class="col-sm-4">
           <dl class="footer__nav-list">
-            <dt class="footer__nav-title pb-5"><span>Cross</span> browser <span>support</span></dt>
+            <dt class="footer__nav-title pb-5">Cross <span class="text-white">browser</span> support</dt>
             <dd><i class="fa fa-internet-explorer darkBlue large"></i></dd>
             <dd><i class="fa fa-opera red large"></i></dd>
             <dd><i class="fa fa-firefox orange large"></i></dd>
@@ -29,7 +29,7 @@
         </div>
         <div class="col-sm-4">
           <dl class="footer__nav-list">
-            <dt class="footer__nav-title pb-5"><span>Navigation</span> Links</dt>
+            <dt class="footer__nav-title pb-5">Navigation <span class="text-white">Links</span></dt>
             <dd><a class="footer__nav-link" href="/">Home</a></dd>
             <dd><a class="footer__nav-link" href="/about-me.html">About Me</a></dd>
             <dd><a class="footer__nav-link" href="/portfolio/">Portfolio</a></dd>
@@ -44,7 +44,7 @@
         </div>
         <div class="col-sm-4">
           <dl class="footer__nav-list">
-            <dt class="footer__nav-title pb-5"><span>Favourite</span> Links</dt>
+            <dt class="footer__nav-title pb-5">Favourite <span class="text-white">Links</span></dt>
             <dd>
               <a class="footer__nav-link" rel="nofollow" href="http://stackoverflow.com/">http://stackoverflow.com/</a>
             </dd>
@@ -58,7 +58,7 @@
       <div class="row">
         <div class="col-sm-4">
           <dl class="footer__nav-list">
-            <dt class="footer__nav-title pb-5"><span>Contact</span> Info</dt>
+            <dt class="footer__nav-title pb-5">Contact <span class="text-white">Info</span></dt>
             <dd>
               <i class="fa fa-phone small"></i>
               <a class="footer__nav-link" href="tel:07932 566 488">07932 566 488</a>
@@ -73,7 +73,7 @@
         </div>
         <div class="col-sm-4">
           <dl class="footer__nav-list">
-            <dt class="footer__nav-title pb-5"><span>100%</span> Valid <span>Html5</span> &amp; <span>Css3</span></dt>
+            <dt class="footer__nav-title pb-5">Code <span class="text-white">samples</span></dt>
             <dd>
               <a rel="nofollow" href="http://validator.w3.org/check?uri=referer" target="_blank"
                 class="validHtml5 footer__nav-link">
@@ -88,7 +88,7 @@
         </div>
         <div class="col-sm-4">
           <dl class="footer__nav-list">
-            <dt class="footer__nav-title pb-5"><span>Connect</span> With <span>Me</span></dt>
+            <dt class="footer__nav-title pb-5">Connect <span class="text-white">With</span> Me</dt>
             <dd>
               <a href="skype:omar.creativedevelopments.net?call" title="Skype: omar.creativedevelopments.net"
                 target="_blank" class="footer__nav-link">
