--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -17,5 +17,7 @@
   }
 }
 .footer__nav-title {
-  text-transform: uppercase;
+  font-size: 1.8rem;
+  @include trajanProFont();
+  color: $secondary-color;
 }
