--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -68,3 +68,7 @@ h6 {
 .error-color {
   color: $alizarin-crimson;
 }
+.skype-color,
+.twitter-color { color: $picton-blue; }
+.linked-in-color { color: $boston-blue; }
+.google-plus-color { color: $radical-red; }
