--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,5 +5,5 @@ $font-family-palatino: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
 $font-family-trajan: 'trajan-pro', trajan-pro, 'lucida-sans', lucida-sans, 'Lucida Grande', Garuda, sans-serif;
 $font-size-base: 1.4rem;
 $primary-color: $mine-shaft;
-$secondary-color: $light-green;
-$tertiary-color: $dark-green;
+$secondary-color: $conifer;
+$tertiary-color: $christi;
