--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -5,16 +5,11 @@ $mercury: #e6e6e6;
 $gallery: #ececec;
 $silver: #C7C7C7;
 
-$light-green: #b5d443;
-$dark-green: #73990b;
+$conifer: #b5d443;
+$christi: #73990b;
 
 $picton-blue: #45C1F4;
 $boston-blue: #3192BF;
 
 $alizarin-crimson: #e31b23;
 $radical-red: #f92f4a;
-
-.skype-color,
-.twitter-color { color: $picton-blue; }
-.linked-in-color { color: $boston-blue; }
-.google-plus-color { color: $radical-red; }
