--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -37,21 +37,30 @@
             <dd><a class="footer__nav-link" href="/services/">Services</a></dd>
             <dd><a class="footer__nav-link" href="/my-skills.html">My Skills</a></dd>
             <dd><a class="footer__nav-link" href="/contact-me.html">Contact Me</a></dd>
-            <dd><a class="footer__nav-link" href="/privacy-policy.html">Privacy Policy</a></dd>
             <dd><a class="footer__nav-link" href="/sitemap.html">Sitemap</a></dd>
-            <dd><a class="footer__nav-link" href="/terms-and-conditions.html">Terms</a></dd>
           </dl>
         </div>
         <div class="col-sm-4">
           <dl class="footer__nav-list">
             <dt class="footer__nav-title pb-5">Favourite <span class="text-white">Links</span></dt>
+            <dd><a class="footer__nav-link" rel="nofollow" href="https://angular.io/">https://angular.io/</a></dd>
+            <dd><a class="footer__nav-link" rel="nofollow" href="https://rxjs.dev/">https://rxjs.dev/</a></dd>
+            <dd>
+              <a class="footer__nav-link" rel="nofollow" href="https://material.angular.io/">
+                https://material.angular.io/
+              </a>
+            </dd>
+            <dd>
+              <a class="footer__nav-link" rel="nofollow" href="https://ngxs.gitbook.io/ngxs/">
+                https://ngxs.gitbook.io/ngxs/
+              </a>
+            </dd>
+            <dd>
+              <a class="footer__nav-link" rel="nofollow" href="https://nodejs.org/en/">https://nodejs.org/en/</a>
+            </dd>
             <dd>
               <a class="footer__nav-link" rel="nofollow" href="http://stackoverflow.com/">http://stackoverflow.com/</a>
             </dd>
-            <dd><a class="footer__nav-link" rel="nofollow" href="https://angularjs.org/">https://angularjs.org/</a></dd>
-            <dd><a class="footer__nav-link" rel="nofollow" href="http://css-tricks.com/">http://css-tricks.com/</a></dd>
-            <dd><a class="footer__nav-link" rel="nofollow" href="http://jquery.com/">http://jquery.com/</a></dd>
-            <dd><a class="footer__nav-link" rel="nofollow" href="http://bytes.com/">http://bytes.com</a></dd>
           </dl>
         </div>
       </div>
