--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -28,16 +28,16 @@
           </dl>
         </div>
         <div class="col-sm-4">
-          <dl class="footer__nav-list">
-            <dt class="footer__nav-title pb-5">Navigation <span class="text-white">Links</span></dt>
-            <dd><a class="footer__nav-link" href="/">Home</a></dd>
-            <dd><a class="footer__nav-link" href="/about-me.html">About Me</a></dd>
-            <dd><a class="footer__nav-link" href="/portfolio/">Portfolio</a></dd>
-            <dd><a class="footer__nav-link" href="/hire-me.html">Hire Me</a></dd>
-            <dd><a class="footer__nav-link" href="/services/">Services</a></dd>
-            <dd><a class="footer__nav-link" href="/my-skills.html">My Skills</a></dd>
-            <dd><a class="footer__nav-link" href="/contact-me.html">Contact Me</a></dd>
-            <dd><a class="footer__nav-link" href="/sitemap.html">Sitemap</a></dd>
+          <dl class="footer__nav-list row">
+            <dt class="footer__nav-title pb-5 col-12">Navigation <span class="text-white">Links</span></dt>
+            <dd class="col-6"><a class="footer__nav-link" href="/">Home</a></dd>
+            <dd class="col-6"><a class="footer__nav-link" href="/about-me.html">About Me</a></dd>
+            <dd class="col-6"><a class="footer__nav-link" href="/portfolio/">Portfolio</a></dd>
+            <dd class="col-6"><a class="footer__nav-link" href="/hire-me.html">Hire Me</a></dd>
+            <dd class="col-6"><a class="footer__nav-link" href="/services/">Services</a></dd>
+            <dd class="col-6"><a class="footer__nav-link" href="/my-skills.html">My Skills</a></dd>
+            <dd class="col-6"><a class="footer__nav-link" href="/contact-me.html">Contact Me</a></dd>
+            <dd class="col-6"><a class="footer__nav-link" href="/sitemap.html">Sitemap</a></dd>
           </dl>
         </div>
         <div class="col-sm-4">
