--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,5 +1,5 @@
-@import '../../../styles/variables';
-@import '../../../styles/mixins';
+@import '~src/styles/variables';
+@import '~src/styles/mixins';
 
 .footer__nav-bg {
   padding: 6.0rem 0;
