--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -19,11 +19,11 @@
         </a>
       </div>
       <div class="col-md-4 text-right d-none d-md-block">
-        <span class="header__social-link pr-4">
+        <span class="header__social-link pr-4 cursor-pointer" (click)="print()">
           <fa-icon class="pr-2 header__social-icon" [icon]="faPrint"></fa-icon>
           Print page
         </span>
-        <a class="header__social-link" href="/sitemap.html">
+        <a class="header__social-link" [routerLink]="['/sitemap']">
           <fa-icon class="pr-2 header__social-icon" [icon]="faSitemap"></fa-icon>
           Sitemap
         </a>
@@ -33,29 +33,29 @@
   <div class="header__nav-bg">
     <div class="container h-100">
       <div class="row align-items-center h-100">
-        <a class="header__logo col-sm-12 col-lg-5" href="/"><span class="text-white">Creative</span> Developments</a>
+        <a class="header__logo col-sm-12 col-lg-5" [routerLink]="['/']"><span class="text-white">Creative</span> Developments</a>
         <nav class="col-lg-7 text-lg-right">
           <ul class="m-0 px-0 pb-5 pb-lg-0">
             <li class="d-inline-flex">
-              <a class="header__nav-link" href="/" title="Home">HOME</a>
+              <a class="header__nav-link" [routerLink]="['/']" title="Home">HOME</a>
             </li>
             <li class="d-inline-flex">
-              <a class="header__nav-link" href="/about-me.html" title="About Me">ABOUT</a>
+              <a class="header__nav-link" [routerLink]="['/about-me']" title="About Me">ABOUT</a>
             </li>
             <li class="d-inline-flex">
-              <a class="header__nav-link" href="/portfolio/" title="Portfolio">PORTFOLIO</a>
+              <a class="header__nav-link" [routerLink]="['/portfolio/']" title="Portfolio">PORTFOLIO</a>
             </li>
             <li class="d-inline-flex">
-              <a class="header__nav-link" href="/hire-me.html" title="Hire Me">HIRE ME</a>
+              <a class="header__nav-link" [routerLink]="['/hire-me']" title="Hire Me">HIRE ME</a>
             </li>
             <li class="d-inline-flex">
-              <a class="header__nav-link" href="/services/" title="Services">SERVICES</a>
+              <a class="header__nav-link" [routerLink]="['/services/']" title="Services">SERVICES</a>
             </li>
             <li class="d-inline-flex">
-              <a class="header__nav-link" href="/my-skills.html" title="My SKills">SKILLS</a>
+              <a class="header__nav-link" [routerLink]="['/my-skills']" title="My SKills">SKILLS</a>
             </li>
             <li class="d-inline-flex">
-              <a class="header__nav-link pr-lg-0" href="/contact-me.html" title="Contact Me">CONTACT</a>
+              <a class="header__nav-link pr-lg-0" [routerLink]="['/contact-me']" title="Contact Me">CONTACT</a>
             </li>
           </ul>
         </nav>
