--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -3,8 +3,11 @@
 
 .header__social-link {
   color: $primary-color;
-  text-decoration: none;
   font-size: 1.2rem;
+
+  &:hover {
+    color: $tertiary-color;
+  }
 }
 .header__social-icon {
   font-size: 1.6rem;
@@ -12,9 +15,12 @@
 .header__logo {
   font-family: $font-family-trajan;
   font-size: 2.5rem;
-  text-decoration: none;
   padding-top: 4.0rem;
   padding-bottom: 4.0rem;
+
+  &:hover {
+    text-decoration: none;
+  }
 }
 .header__nav-bg {
   @include bannerBg();
@@ -22,8 +28,8 @@
 .header__nav-link {
   padding: 1.2rem 2.0rem 1.2rem 0;
   color: $white;
-  text-decoration: none;
-}
-.header__nav-link:hover {
-  color: $secondary-color;
+
+  &:hover {
+    color: $secondary-color;
+  }
 }
