--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,16 +2,28 @@
   <div class="container py-4">
     <div class="row">
       <div class="col-sm-12 col-md-8">
-        <a href="skype:omar.creativedevelopments.net?call" title="Skype: omar.creativedevelopments.net"
-           target="_blank" class="header__social-link pr-4 d-inline-flex align-items-center no-underline">
+        <a
+          href="skype:omar.creativedevelopments.net?call"
+          title="Skype: omar.creativedevelopments.net"
+          target="_blank"
+          class="header__social-link pr-4 d-inline-flex align-items-center no-underline"
+        >
           <fa-icon class="pr-3 skype-color header__social-icon" [icon]="faSkype"></fa-icon>Skype
         </a>
-        <a href="https://www.linkedin.com/in/omarcreativedev" title="LinkedIn: Omar Mirza" target="_blank"
-           class="header__social-link pr-4 d-inline-flex align-items-center no-underline">
+        <a
+          href="https://www.linkedin.com/in/omarcreativedev"
+          title="LinkedIn: Omar Mirza"
+          target="_blank"
+          class="header__social-link pr-4 d-inline-flex align-items-center no-underline"
+        >
           <fa-icon class="pr-3 linked-in-color header__social-icon" [icon]="faLinkedinIn"></fa-icon>LinkedIn
         </a>
-        <a href="https://twitter.com/OmarCreativeDev" title="Twitter: OmarCreativeDev" target="_blank"
-           class="header__social-link d-inline-flex align-items-center no-underline">
+        <a
+          href="https://twitter.com/OmarCreativeDev"
+          title="Twitter: OmarCreativeDev"
+          target="_blank"
+          class="header__social-link d-inline-flex align-items-center no-underline"
+        >
           <fa-icon class="pr-3 twitter-color header__social-icon" [icon]="faTwitter"></fa-icon>Twitter
         </a>
       </div>
@@ -28,7 +40,9 @@
   <div class="header__nav-bg">
     <div class="container h-100">
       <div class="row align-items-center h-100">
-        <a class="header__logo col-sm-12 col-lg-5 no-underline" [routerLink]="['/']"><span class="text-white">Creative</span> Developments</a>
+        <a class="header__logo col-sm-12 col-lg-5 no-underline" [routerLink]="['/']"
+          ><span class="text-white">Creative</span> Developments</a
+        >
         <nav class="col-lg-7 text-lg-right">
           <ul class="m-0 px-0 pb-5 pb-lg-0">
             <li class="d-inline-flex">
@@ -50,7 +64,9 @@
               <a class="header__nav-link no-underline" [routerLink]="['/my-skills']" title="My SKills">SKILLS</a>
             </li>
             <li class="d-inline-flex">
-              <a class="header__nav-link no-underline pr-lg-0" [routerLink]="['/contact-me']" title="Contact Me">CONTACT</a>
+              <a class="header__nav-link no-underline pr-lg-0" [routerLink]="['/contact-me']" title="Contact Me"
+                >CONTACT</a
+              >
             </li>
           </ul>
         </nav>
