removed title attributes from anchors

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -84,35 +84,42 @@
           <dl class="footer__nav-list">
             <dt class="footer__nav-title pb-5">Code <span class="text-white">samples</span></dt>
             <dd>
-              <a rel="nofollow" href="http://validator.w3.org/check?uri=referer" target="_blank"
-                class="validHtml5 footer__nav-link">
-              <i class="fa fa-html5 orange large"></i>
-            </a></dd>
+              <a
+                rel="nofollow"
+                href="http://validator.w3.org/check?uri=referer"
+                target="_blank"
+                class="validHtml5 footer__nav-link"
+              >
+                <i class="fa fa-html5 orange large"></i>
+              </a>
+            </dd>
             <dd>
-              <a rel="nofollow" href="http://jigsaw.w3.org/css-validator/check/referer?profile=css3" target="_blank"
-              class="validCss3 footer__nav-link">
-              <i class="fa fa-css3 lightBlue large"></i>
-            </a></dd>
+              <a
+                rel="nofollow"
+                href="http://jigsaw.w3.org/css-validator/check/referer?profile=css3"
+                target="_blank"
+                class="validCss3 footer__nav-link"
+              >
+                <i class="fa fa-css3 lightBlue large"></i>
+              </a>
+            </dd>
           </dl>
         </div>
         <div class="col-sm-4">
           <dl class="footer__nav-list">
             <dt class="footer__nav-title pb-5">Connect <span class="text-white">With</span> Me</dt>
             <dd>
-              <a href="skype:omar.creativedevelopments.net?call" title="Skype: omar.creativedevelopments.net"
-                target="_blank" class="footer__nav-link">
+              <a href="skype:omar.creativedevelopments.net?call" target="_blank" class="footer__nav-link">
                 <i class="fa fa-skype lightBlue large"></i>
               </a>
             </dd>
             <dd>
-              <a href="https://www.linkedin.com/in/omarcreativedev" title="LinkedIn: Omar Mirza" target="_blank"
-                class="footer__nav-link">
+              <a href="https://www.linkedin.com/in/omarcreativedev" class="footer__nav-link">
                 <i class="fa fa-linkedin darkBlue large"></i>
               </a>
             </dd>
             <dd>
-              <a href="https://twitter.com/OmarCreativeDev" title="Twitter: OmarCreativeDev" target="_blank"
-                class="footer__nav-link">
+              <a href="https://twitter.com/OmarCreativeDev" class="footer__nav-link">
                 <i class="fa fa-twitter lightBlue large"></i>
               </a>
             </dd>
