--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,7 +4,6 @@
       <div class="col-sm-12 col-md-8">
         <a
           href="skype:omar.creativedevelopments.net?call"
-          title="Skype: omar.creativedevelopments.net"
           target="_blank"
           class="header__social-link pr-4 d-inline-flex align-items-center no-underline"
         >
@@ -12,7 +11,6 @@
         </a>
         <a
           href="https://www.linkedin.com/in/omarcreativedev"
-          title="LinkedIn: Omar Mirza"
           target="_blank"
           class="header__social-link pr-4 d-inline-flex align-items-center no-underline"
         >
@@ -20,7 +18,6 @@
         </a>
         <a
           href="https://twitter.com/OmarCreativeDev"
-          title="Twitter: OmarCreativeDev"
           target="_blank"
           class="header__social-link d-inline-flex align-items-center no-underline"
         >
@@ -46,27 +43,25 @@
         <nav class="col-lg-7 text-lg-right">
           <ul class="m-0 px-0 pb-5 pb-lg-0">
             <li class="d-inline-flex">
-              <a class="header__nav-link no-underline" [routerLink]="['/']" title="Home">HOME</a>
+              <a class="header__nav-link no-underline" [routerLink]="['/']">HOME</a>
             </li>
             <li class="d-inline-flex">
-              <a class="header__nav-link no-underline" [routerLink]="['/about-me']" title="About Me">ABOUT</a>
+              <a class="header__nav-link no-underline" [routerLink]="['/about-me']">ABOUT</a>
             </li>
             <li class="d-inline-flex">
-              <a class="header__nav-link no-underline" [routerLink]="['/portfolio/']" title="Portfolio">PORTFOLIO</a>
+              <a class="header__nav-link no-underline" [routerLink]="['/portfolio/']">PORTFOLIO</a>
             </li>
             <li class="d-inline-flex">
-              <a class="header__nav-link no-underline" [routerLink]="['/hire-me']" title="Hire Me">HIRE ME</a>
+              <a class="header__nav-link no-underline" [routerLink]="['/hire-me']">HIRE ME</a>
             </li>
             <li class="d-inline-flex">
-              <a class="header__nav-link no-underline" [routerLink]="['/services/']" title="Services">SERVICES</a>
+              <a class="header__nav-link no-underline" [routerLink]="['/services/']">SERVICES</a>
             </li>
             <li class="d-inline-flex">
-              <a class="header__nav-link no-underline" [routerLink]="['/my-skills']" title="My SKills">SKILLS</a>
+              <a class="header__nav-link no-underline" [routerLink]="['/my-skills']">SKILLS</a>
             </li>
             <li class="d-inline-flex">
-              <a class="header__nav-link no-underline pr-lg-0" [routerLink]="['/contact-me']" title="Contact Me"
-                >CONTACT</a
-              >
+              <a class="header__nav-link no-underline pr-lg-0" [routerLink]="['/contact-me']">CONTACT</a>
             </li>
           </ul>
         </nav>
