--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,3 +7,6 @@ $font-size-base: 1.4rem;
 $primary-color: $mine-shaft;
 $secondary-color: $conifer;
 $tertiary-color: $christi;
+
+// bootstrap overrides
+$link-color: $secondary-color;
