updates to footer

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -60,25 +60,25 @@
           </dl>
         </div>
         <div class="col-sm-4">
-          <dl class="footer__nav-list">
-            <dt class="footer__nav-title pb-5">Favourite <span class="text-white">Links</span></dt>
-            <dd><a class="footer__nav-link" rel="nofollow" href="https://angular.io/">https://angular.io/</a></dd>
-            <dd><a class="footer__nav-link" rel="nofollow" href="https://rxjs.dev/">https://rxjs.dev/</a></dd>
-            <dd>
+          <dl class="footer__nav-list row">
+            <dt class="footer__nav-title pb-5 col-12">Favourite <span class="text-white">Links</span></dt>
+            <dd class="col-6"><a class="footer__nav-link" rel="nofollow" href="https://angular.io/">Angular</a></dd>
+            <dd class="col-6"><a class="footer__nav-link" rel="nofollow" href="https://rxjs.dev/">RxJs</a></dd>
+            <dd class="col-6">
               <a class="footer__nav-link" rel="nofollow" href="https://material.angular.io/">
-                https://material.angular.io/
+                material
               </a>
             </dd>
-            <dd>
+            <dd class="col-6">
               <a class="footer__nav-link" rel="nofollow" href="https://ngxs.gitbook.io/ngxs/">
-                https://ngxs.gitbook.io/ngxs/
+                NGXS
               </a>
             </dd>
-            <dd>
-              <a class="footer__nav-link" rel="nofollow" href="https://nodejs.org/en/">https://nodejs.org/en/</a>
+            <dd class="col-6">
+              <a class="footer__nav-link" rel="nofollow" href="https://nodejs.org/en/">Node</a>
             </dd>
-            <dd>
-              <a class="footer__nav-link" rel="nofollow" href="http://stackoverflow.com/">http://stackoverflow.com/</a>
+            <dd class="col-6">
+              <a class="footer__nav-link" rel="nofollow" href="http://stackoverflow.com/">Stack overflow</a>
             </dd>
           </dl>
         </div>
