updated footer browser icon colors

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -19,36 +19,42 @@
             <dt class="footer__nav-title pb-5">Cross <span class="text-white">browser</span> support</dt>
             <dd class="d-inline-flex pr-4 pb-4">
               <fa-icon
-                class="d-inline-flex justify-content-center fa-internet-explorer footer__icon"
+                class="d-inline-flex justify-content-center internet-explorer-color footer__icon"
                 [icon]="faInternetExplorer"
               ></fa-icon>
             </dd>
             <dd class="d-inline-flex pr-4 pb-4">
-              <fa-icon class="d-inline-flex justify-content-center fa-opera footer__icon" [icon]="faOpera"></fa-icon>
+              <fa-icon class="d-inline-flex justify-content-center opera-color footer__icon" [icon]="faOpera"></fa-icon>
             </dd>
             <dd class="d-inline-flex pr-4 pb-4">
               <fa-icon
-                class="d-inline-flex justify-content-center fa-firefox footer__icon"
+                class="d-inline-flex justify-content-center firefox-color footer__icon"
                 [icon]="faFirefox"
               ></fa-icon>
             </dd>
             <dd class="d-inline-flex pr-4 pb-4">
-              <fa-icon class="d-inline-flex justify-content-center fa-chrome footer__icon" [icon]="faChrome"></fa-icon>
-            </dd>
-            <dd class="d-inline-flex pr-4 pb-4">
-              <fa-icon class="d-inline-flex justify-content-center fa-safari footer__icon" [icon]="faSafari"></fa-icon>
+              <fa-icon
+                class="d-inline-flex justify-content-center chrome-color footer__icon"
+                [icon]="faChrome"
+              ></fa-icon>
             </dd>
             <dd class="d-inline-flex pr-4 pb-4">
               <fa-icon
-                class="d-inline-flex justify-content-center fa-android footer__icon"
+                class="d-inline-flex justify-content-center safari-color footer__icon"
+                [icon]="faSafari"
+              ></fa-icon>
+            </dd>
+            <dd class="d-inline-flex pr-4 pb-4">
+              <fa-icon
+                class="d-inline-flex justify-content-center android-color footer__icon"
                 [icon]="faAndroid"
               ></fa-icon>
             </dd>
             <dd class="d-inline-flex pr-4 pb-4">
-              <fa-icon class="d-inline-flex justify-content-center fa-apple footer__icon" [icon]="faApple"></fa-icon>
+              <fa-icon class="d-inline-flex justify-content-center apple-color footer__icon" [icon]="faApple"></fa-icon>
             </dd>
             <dd class="d-inline-flex pr-4 pb-4">
-              <fa-icon class="d-inline-flex justify-content-center fa-linux footer__icon" [icon]="faLinux"></fa-icon>
+              <fa-icon class="d-inline-flex justify-content-center footer__icon" [icon]="faLinux"></fa-icon>
             </dd>
           </dl>
         </div>
@@ -125,7 +131,7 @@
             <dd class="d-inline-flex pr-4">
               <a href="https://bitbucket.org/omarCreativeDev" target="_blank" class="d-inline-flex footer__nav-link">
                 <fa-icon
-                  class="d-inline-flex justify-content-center fa-bitbucket footer__icon"
+                  class="d-inline-flex justify-content-center bitbucket-color footer__icon"
                   [icon]="faBitbucket"
                 ></fa-icon>
               </a>
