--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -11,5 +11,10 @@ $christi: #73990b;
 $picton-blue: #45C1F4;
 $boston-blue: #3192BF;
 
+$blue-ribbon: #0e50f7;
+
 $alizarin-crimson: #e31b23;
 $radical-red: #f92f4a;
+$cinnabar: #E44D26;
+$gold: #FCD207;
+$iron: #cbcfd3;
