--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -68,6 +68,15 @@ h6 {
   color: $alizarin-crimson;
 }
 .skype-color,
-.twitter-color { color: $picton-blue; }
+.twitter-color,
+.safari-color { color: $picton-blue; }
+
+.internet-explorer-color,
 .linked-in-color { color: $boston-blue; }
-.google-plus-color { color: $radical-red; }
+
+.bitbucket-color { color: $blue-ribbon; }
+.opera-color { color: $radical-red; }
+.firefox-color { color: $cinnabar; }
+.chrome-color { color: $gold; }
+.android-color { color: $conifer; }
+.apple-color { color: $iron; }
